// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when fetching the entity counts failed 1`] = `
<BasicSection>
  <SectionHeading>
    Admin 
    <span>
      Dashboard
    </span>
  </SectionHeading>
  <Error
    type="DEFAULT"
  />
</BasicSection>
`;

exports[`should render correctly when the entity counts have been fetched 1`] = `
<BasicSection>
  <SectionHeading>
    Admin 
    <span>
      Dashboard
    </span>
  </SectionHeading>
  <StatisticCollection
    entityCounts={
      Object {
        "venue": Object {
          "count": 100,
          "entityType": "venue",
        },
      }
    }
  />
</BasicSection>
`;

exports[`should render correctly while the entity counts are being fetched 1`] = `
<BasicSection>
  <SectionHeading>
    Admin 
    <span>
      Dashboard
    </span>
  </SectionHeading>
  <BoxesLoader
    size="large"
    type="default"
  />
</BasicSection>
`;
